[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gooviz"
version = "0.1.0"
description = "Interactive visualization dashboard for Goo simulation data"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Antoine Ruzette", email = "antoine.ruzette@harvard.edu" }
]
dependencies = [
    "h5py>=3.12.1",
    "numpy==1.26.4",
    "pandas>=1.3.0",
    "h5py>=3.6.0",
    "plotly>=5.13.0",
    "dash>=2.9.0",
    "dash-bootstrap-components>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[project.urls]
"Homepage" = "https://github.com/yourusername/gooviz"
"Bug Tracker" = "https://github.com/yourusername/gooviz/issues"
"Documentation" = "https://gooviz.readthedocs.io/"

[project.scripts]
gooviz = "gooviz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gooviz"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/src/gooviz",
    "/examples",
    "/tests",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
] 